--- a/css/main.css
+++ b/css/main.css
@@ -10,47 +10,6 @@ html {
   font-size: 100%;
 }
 
-nav ul a {
-    color: #000;
-    font-weight: bold;
-    text-decoration: none;
-    padding: 0 0.5em;
-}
-
-.logo {
-  max-width: 50px;
-}
-
-.about {
-    background-color: #D0E1F5;
-    display: flex;
-    gap: 0.5em;
-    align-items: center;
-}
-
-.profile {
-  margin: 1em;
-  max-width: 30%;
-  border-radius: 20%;
-}
-
-body {
-	margin: 0;
-	background: #fff;
-	font-family: 'Lato', sans-serif;
-	font-weight: 400;
-}
-
-img {
-  width: 100%;
-}
-
-.content {
-  background-color: #ccc;
-  display: grid;
-  place-items: center;
-}
-
 header {
   background: #fff;
   text-align: center;
@@ -136,15 +95,20 @@ nav a {
   font-size: 1.2rem;
   text-transform: uppercase;
   opacity: 0;
-/*   transition: opacity 150ms ease-in-out; */
   transition: opacity 250ms ease-in-out 250ms;
+}
+
+nav ul a {
+    color: #000;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 0 0.5em;
 }
 
 nav a:hover {
   color: #c0c0c0;
 }
 
-/* ~ looks for any preceeding sibling. */
 .nav-toggle:checked ~ nav {
   transform: scale(1,1);
   height: auto;
@@ -164,7 +128,124 @@ nav a:hover {
   padding-top: 1.5em;
 }
 
+.logo {
+  max-width: 50px;
+}
 
+.about {
+    background-color: #D0E1F5;
+    display: grid;
+    padding: 2rem;
+    gap: 0.5em;
+}
+
+.about {
+  display: grid;
+  grid-template-areas:
+  "box1"
+  "box2"
+  "box3"
+  "box4";
+}
+
+#about {
+grid-area: box1;
+}
+
+.title {
+grid-area: box3;
+}
+
+.desc {
+grid-area: box4;
+}
+
+.profile {
+  margin: 1em;
+  max-width: 50%;
+  border-radius: 100%;
+  align-self: center;
+  grid-area: box2
+}
+
+body {
+	margin: 0;
+	background: #fff;
+	font-family: 'Lato', sans-serif;
+	font-weight: 400;
+}
+
+.content {
+  background-color: #ccc;
+  /* display: grid; */
+  place-items: center;
+  padding: 7em 1em 1em 1em;
+}
+
+.contact {
+  background-image: url("https://objects.artspan.com/member/dhamblin/1200/3875215.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-color: #ccc;
+  display: grid;
+  place-items: center;
+  padding: 7em 1em 1em 1em;
+}
+
+.gallery-content {
+  display: grid;
+  grid-template-areas:
+  "title"
+  "cityscapes"
+  "vehicles"
+  "flora"
+  "fauna";
+  gap: 1rem;
+  align-items: start;
+}
+
+.title {
+  grid-area: title;
+}
+
+img {
+  width: 100%;
+}
+
+form {
+	max-width: 450px;
+	margin: 0 auto;
+}
+
+.contact-form {
+   position: relative;
+   max-width: 75rem;
+   margin: 3rem auto;
+   background: #fff;
+   padding: 5rem;
+   border-radius: .6rem;
+   overflow: hidden;
+   box-shadow: 0 0 5rem rgba(0, 0, 0, 0.1);
+  }
+}
+	label {
+			opacity: 0.3;
+			font-weight: bold;
+			position: absolute;
+      width: 100%;
+		}
+
+    input {
+      padding: 0.5rem 20rem 0.5rem 0.5rem;
+    }
+
+    #message {
+      padding-bottom: 10rem;
+    }
+
+    #submit {
+      padding: 0.5rem;
+    }
 
 @media screen and (min-width: 48em) {
   .nav-toggle-label {
@@ -217,4 +298,34 @@ nav a:hover {
   nav a:hover::before {
     transform: scale(1,1);
   }
+
+  .gallery-content {
+    display: grid;
+    grid-template-rows: repeat (4, 1fr);
+    grid-template-areas:
+    "title title title title"
+    "cityscapes vehicles flora fauna";
+    gap: 1em;
+    align-items: start;
+  }
+
+  .about {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-areas:
+    "box1 box1"
+    "box2 box3"
+    "box2 box4";
+}
+
+#about {
+  grid-area: box1;
+}
+.title {
+  grid-area: box3;
+}
+.desc {
+  grid-area: box4;
+}
+
 }
