--- a/css/main (Conflicted copy from Dillon’s MacBook Pro on 2022-12-07).css
+++ b/css/main (Conflicted copy from Dillon’s MacBook Pro on 2022-12-07).css
@@ -212,15 +212,15 @@ img {
 }
 
 form {
-  max-width: 100%;
+  max-width: 450px;
   margin: 0 auto;
 }
 
 .contact-form {
   position: relative;
-  max-width: 100%;
+  max-width: 75rem;
   margin: 3rem auto;
-  background: #cccccc;
+  background: #fff;
   padding: 5rem;
   border-radius: .6rem;
   overflow: hidden;
@@ -232,12 +232,10 @@ label {
   font-weight: bold;
   position: absolute;
   width: 100%;
-  padding: 0;
 }
 
 input {
-  padding: 0.5rem 5rem 0.5rem 0.5rem;
-  max-width: 100%;
+  padding: 0.5rem 20rem 0.5rem 0.5rem;
 }
 
 #message {
@@ -246,55 +244,6 @@ input {
 
 #submit {
   padding: 0.5rem;
-}
-
-.footer {
-  display: grid;
-  gap: 1rem;
-  font-size: 0.5rem;
-  place-items: center;
-  grid-template-columns: 1fr 1fr 1fr;
-  padding: 1rem;
-}
-
-footer img {
-  max-width: 50px;
-}
-
-@media (prefers-color-scheme: Dark)
-{
-  .content, nav, body, header, footer {
-    background: #323232;
-    color: #ffffff;
-  }
-
-  .logo {
-    padding: 0.2rem;
-    background: #ffffff;
-  }
-
-  nav ul li a {
-    color: #ffffff;
-  }
-
-  .about {
-    background: #2c59a8;
-  }
-
-  .contact-form {
-    background: #323232;
-  }
-
-  .nav-toggle-label span,
-  .nav-toggle-label span::before,
-  .nav-toggle-label span::after {
-    display: block;
-    background: #ffffff;
-    height: 2px;
-    width: 2em;
-    border-radius: 2px;
-    position: relative;
-  }
 }
 
 @media screen and (min-width: 48em) {
@@ -349,11 +298,6 @@ footer img {
     transform: scale(1,1);
   }
 
-  input {
-    padding: 0.5rem 30rem 0.5rem 0.5rem;
-    max-width: 100%;
-  }
-
   .gallery-content {
     display: grid;
     grid-template-rows: repeat (4, 1fr);
@@ -382,4 +326,19 @@ footer img {
   .desc-about {
     grid-area: box4;
   }
-}
+
+  @media (prefers-color-scheme: Dark)
+  {
+    body {
+      font-style: #f0f0f0;
+      background-color: #333;
+    }
+    .content {
+      background-color: #000;
+    }
+
+    nav {
+      background: #000;
+    }
+
+  }
