--- a/css/main.css
+++ b/css/main.css
@@ -136,7 +136,7 @@ nav a:hover {
   background-color: #D0E1F5;
   display: grid;
   padding: 2rem;
-  gap: 0.5em;
+  /* gap: 0.5em; */
 }
 
 .about {
@@ -158,11 +158,13 @@ nav a:hover {
 
 .desc-about {
   grid-area: box4;
+  font-family: 'Merriweather', serif;
+  font-size: 0.8rem;
 }
 
 .profile {
   margin: 1em;
-  max-width: 50%;
+  max-width: 90%;
   border-radius: 100%;
   align-self: center;
   grid-area: box2
@@ -203,6 +205,15 @@ body {
   align-items: start;
 }
 
+.gallery-content div {
+  padding-bottom: 3rem;
+}
+
+b {
+  font-family: 'Merriweather', serif;
+  font-size: 0.5rem;
+}
+
 .title {
   grid-area: title;
 }
@@ -221,7 +232,7 @@ form {
   max-width: 100%;
   margin: 3rem auto;
   background: #cccccc;
-  padding: 5rem;
+  padding: 3rem;
   border-radius: .6rem;
   overflow: hidden;
   box-shadow: 0 0 5rem rgba(0, 0, 0, 0.1);
@@ -251,7 +262,7 @@ input {
 .footer {
   display: grid;
   gap: 1rem;
-  font-size: 0.5rem;
+  font-size: 0.7rem;
   place-items: center;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 1rem;
@@ -288,18 +299,25 @@ footer img {
   .nav-toggle-label span,
   .nav-toggle-label span::before,
   .nav-toggle-label span::after {
-    display: block;
     background: #ffffff;
-    height: 2px;
-    width: 2em;
-    border-radius: 2px;
-    position: relative;
   }
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 700px) {
   .nav-toggle-label {
     display: none;
+  }
+
+  body {
+    font-size: 1.2rem;
+  }
+
+  b {
+    font-size: 0.8rem;
+  }
+
+  .desc-about {
+    font-size: 1rem;
   }
 
   header {
@@ -350,16 +368,21 @@ footer img {
   }
 
   input {
-    padding: 0.5rem 30rem 0.5rem 0.5rem;
+    padding: 0.5rem 15rem 0.5rem 0.5rem;
     max-width: 100%;
+  }
+
+  .logo {
+    margin-left: 5rem;
   }
 
   .gallery-content {
     display: grid;
-    grid-template-rows: repeat (4, 1fr);
+    grid-template-rows: repeat (2, 1fr);
     grid-template-areas:
-    "title title title title"
-    "cityscapes vehicles flora fauna";
+    "title title"
+    "cityscapes vehicles"
+    "flora fauna";
     gap: 1em;
     align-items: start;
   }
@@ -381,5 +404,38 @@ footer img {
   }
   .desc-about {
     grid-area: box4;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .nav-toggle-label {
+    display: none;
+  }
+
+  body {
+    font-size: 1.5rem;
+  }
+
+  b {
+    font-size: 1rem;
+  }
+
+  .desc-about {
+    font-size: 1.2rem;
+  }
+
+  input {
+    padding: 0.5rem 30rem 0.5rem 0.5rem;
+    max-width: 100%;
+  }
+
+  .gallery-content {
+    display: grid;
+    grid-template-rows: repeat (4, 1fr);
+    grid-template-areas:
+    "title title title title"
+    "cityscapes vehicles flora fauna";
+    gap: 1em;
+    align-items: start;
   }
 }
